# email-ops-env

./: Dockerfile  README.md  Readme.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: email_env.py  graders.py  models.py  tasks.py
server/: app.py
